trying to open a thread to get user input.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,6 +99,7 @@
         "*.ipp": "cpp",
         "barrier": "cpp",
         "format": "cpp",
-        "numbers": "cpp"
+        "numbers": "cpp",
+        "__availability": "cpp"
     }
 }
